# deribit_tz

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  exceptions.py  main.py  utils.py
src/api/: dependencies.py  prices.py
src/migrations/: env.py
src/models/: __init__.py  prices.py
src/repos/: __init__.py  base.py  prices.py  users.py
src/repos/mappers/: mappers.py
src/schemas/: prices.py
src/services/: deribit_client.py
src/tasks/: fetch_prices.py
